--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -25,6 +25,10 @@
   +root-element
   border: 1px solid map-get($white, darker)
   display: inline-block
+  max-width: 100%
+
+  img
+    max-width: 100%
 
   figcaption
     font-size: 0.85rem
