--- a/lib/jade/docs/3.x/ui/tables/index.jade
+++ b/lib/jade/docs/3.x/ui/tables/index.jade
@@ -1,300 +1,321 @@
-extends ../../layout
+extends ../../_layout
 
 block hero-title
   h1 Tables
 
-block basic
-  :markdown
-    The base styling for tables is very minimal, focused mainly on correcting
-    the weirdness of default HTML styling.
+block variables
+  - var showFooter = false
+  - var title = "Tables"
 
-  table.table
-    thead
-      tr
-        th First
-        th Last
-        th Role
-    tbody
-      tr
-        td John
-        td Smith
-        td Consultant
-      tr
-        td Mary
-        td Todd
-        td President
-      tr
-        td Jane
-        td Doe
-        td Marketer
-      tr
-        td Albert
-        td West
-        td Graphic Design
+block ui-stylesheet
+  link(rel="stylesheet" href="/css/pages/docs/ui/tables.css")
 
-  :markdown
-    <span>
+block documents
+  .document
+    article.article
+      :markdown
+        The base styling for tables is very minimal, focused mainly on correcting
+        the weirdness of default HTML styling.
 
-        <table class="table">
-          <thead>
-            <tr>
-              <th>First</th>
-              <th>Last</th>
-              <th>Role</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>John</td>
-              <td>Smith</td>
-              <td>Consultant</td>
-            </tr>
-            <tr>
-              <td>Mary</td>
-              <td>Todd</td>
-              <td>President</td>
-            </tr>
-            ...
-          </tbody>
-        </table>
+      table.table
+        thead
+          tr
+            th First
+            th Last
+            th Role
+        tbody
+          tr
+            td John
+            td Smith
+            td Consultant
+          tr
+            td Mary
+            td Todd
+            td President
+          tr
+            td Jane
+            td Doe
+            td Marketer
+          tr
+            td Albert
+            td West
+            td Graphic Design
 
-  .if-semantic
-    :markdown
-      <span>
+    article.code
+      :markdown
+        <span>
 
-          .table {
-            @import table();
-          }
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                  <th>Role</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>John</td>
+                  <td>Smith</td>
+                  <td>Consultant</td>
+                </tr>
+                <tr>
+                  <td>Mary</td>
+                  <td>Todd</td>
+                  <td>President</td>
+                </tr>
+                ...
+              </tbody>
+            </table>
 
-block variations
-  :markdown
-    ## Blank tables
+      .if-semantic
+        :markdown
+          <span>
 
-    While the tables default to something structured and readable,
-    this may not work with your theme either. For that reason, there
-    is an option for blank tables.
+              .table {
+                @import table();
+              }
 
-  table.table.table-blank
-    thead
-      tr
-        th First
-        th Last
-    tbody
-      tr
-        td Jane
-        td Doe
-      tr
-        td John
-        td Smith
+  .document
+    article.article
+      :markdown
+        # Blank tables
 
-  :markdown
-    <span>
+        While the tables default to something structured and readable,
+        this may not work with your theme either. For that reason, there
+        is an option for blank tables.
 
-        <table class="table table-blank">
-          <thead>
-            <tr>
-              <th>First</th>
-              <th>Last</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jane</td>
-              <td>Doe</td>
-            </tr>
-            <tr>
-              <td>John</td>
-              <td>Smith</td>
-            </tr>
-          </tbody>
-        </table>
+      table.table.table-blank
+        thead
+          tr
+            th First
+            th Last
+        tbody
+          tr
+            td Jane
+            td Doe
+          tr
+            td John
+            td Smith
 
-  .if-semantic
-    :markdown
-      <span>
+    article.code
+      :markdown
+        <span>
 
-          .table.table-blank {
-            @import table($blank: true);
-          }
+            <table class="table table-blank">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jane</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>John</td>
+                  <td>Smith</td>
+                </tr>
+              </tbody>
+            </table>
 
-  :markdown
-    ## Readability tweaks
+      .if-semantic
+        :markdown
+          <span>
 
-    ### Zebra-striping
+              .table.table-blank {
+                @import table($blank: true);
+              }
 
-  table.table.table-zebra
-    thead
-      tr
-        th First
-        th Last
-    tbody
-      tr
-        td Jane
-        td Doe
-      tr
-        td Bob
-        td Smith
-      tr
-        td Craig
-        td Thompson
-      tr
-        td Doug
-        td Winston
+  .document
+    article.article
+      :markdown
+        # Readability tweaks
 
-  :markdown
-    <span>
+        ## Zebra-striping
 
-        <table class="table table-zebra">
-          <thead>
-            <tr>
-              <th>First</th>
-              <th>Last</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jane</td>
-              <td>Doe</td>
-            </tr>
-            <tr>
-              <td>Bob</td>
-              <td>Smith</td>
-            </tr>
-            <tr>
-              <td>Craig</td>
-              <td>Thompson</td>
-            </tr>
-            <tr>
-              <td>Doug</td>
-              <td>Winston</td>
-            </tr>
-          </tbody>
-        </table>
+      table.table.table-zebra
+        thead
+          tr
+            th First
+            th Last
+        tbody
+          tr
+            td Jane
+            td Doe
+          tr
+            td Bob
+            td Smith
+          tr
+            td Craig
+            td Thompson
+          tr
+            td Doug
+            td Winston
 
-  .if-semantic
-    :markdown
-      <span>
+    article.code
+      :markdown
+        <span>
 
-          .table.zebra {
-            @import table($zebra: true);
-          }
+            <table class="table table-zebra">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jane</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>Bob</td>
+                  <td>Smith</td>
+                </tr>
+                <tr>
+                  <td>Craig</td>
+                  <td>Thompson</td>
+                </tr>
+                <tr>
+                  <td>Doug</td>
+                  <td>Winston</td>
+                </tr>
+              </tbody>
+            </table>
 
-  h3 Row hover
+      .if-semantic
+        :markdown
+          <span>
 
-  table.table.table-hover
-    thead
-      tr
-        th First
-        th Last
-    tbody
-      tr
-        td Jane
-        td Doe
-      tr
-        td Bob
-        td Smith
-      tr
-        td Craig
-        td Thompson
-      tr
-        td Doug
-        td Winston
+              .table.zebra {
+                @import table($zebra: true);
+              }
 
-  :markdown
-    <span>
+  .document
+    article.article
+      h1 Row hover
 
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>First</th>
-              <th>Last</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jane</td>
-              <td>Doe</td>
-            </tr>
-            <tr>
-              <td>Bob</td>
-              <td>Smith</td>
-            </tr>
-            <tr>
-              <td>Craig</td>
-              <td>Thompson</td>
-            </tr>
-            <tr>
-              <td>Doug</td>
-              <td>Winston</td>
-            </tr>
-          </tbody>
-        </table>
+      table.table.table-hover
+        thead
+          tr
+            th First
+            th Last
+        tbody
+          tr
+            td Jane
+            td Doe
+          tr
+            td Bob
+            td Smith
+          tr
+            td Craig
+            td Thompson
+          tr
+            td Doug
+            td Winston
 
-  .if-semantic
-    :markdown
-      <span>
+    article.code
+      :markdown
+        <span>
 
-          .table.table-hover {
-            @import table($hover: true);
-          }
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jane</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>Bob</td>
+                  <td>Smith</td>
+                </tr>
+                <tr>
+                  <td>Craig</td>
+                  <td>Thompson</td>
+                </tr>
+                <tr>
+                  <td>Doug</td>
+                  <td>Winston</td>
+                </tr>
+              </tbody>
+            </table>
 
-  h2 Combining
+      .if-semantic
+        :markdown
+          <span>
 
-  p Styles are designed to be decoupled, so they can be combined with others.
+              .table.table-hover {
+                @import table($hover: true);
+              }
 
-  table.table.table-zebra.table-hover.table-blank
-    thead
-      tr
-        th First
-        th Last
-    tbody
-      tr
-        td Jane
-        td Doe
-      tr
-        td Bob
-        td Smith
-      tr
-        td Craig
-        td Thompson
-      tr
-        td Doug
-        td Winston
+  .document
+    article.article
+      h1 Combining
 
-  :markdown
-    <span>
+      p Styles are designed to be decoupled, so they can be combined with others.
 
-        <table class="table table-zebra table-hover table-blank">
-          <thead>
-            <tr>
-              <th>First</th>
-              <th>Last</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jane</td>
-              <td>Doe</td>
-            </tr>
-            <tr>
-              <td>Bob</td>
-              <td>Smith</td>
-            </tr>
-            <tr>
-              <td>Craig</td>
-              <td>Thompson</td>
-            </tr>
-            <tr>
-              <td>Doug</td>
-              <td>Winston</td>
-            </tr>
-          </tbody>
-        </table>
+      table.table.table-zebra.table-hover.table-blank
+        thead
+          tr
+            th First
+            th Last
+        tbody
+          tr
+            td Jane
+            td Doe
+          tr
+            td Bob
+            td Smith
+          tr
+            td Craig
+            td Thompson
+          tr
+            td Doug
+            td Winston
 
-  .if-semantic
-    :markdown
-      <span>
+    article.code
+      :markdown
+        <span>
 
-          .table.table-hover.table-zebra.table-blank {
-            @import table($hover: true, $blank: true, $zebra: true);
-          }
+            <table class="table table-zebra table-hover table-blank">
+              <thead>
+                <tr>
+                  <th>First</th>
+                  <th>Last</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jane</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>Bob</td>
+                  <td>Smith</td>
+                </tr>
+                <tr>
+                  <td>Craig</td>
+                  <td>Thompson</td>
+                </tr>
+                <tr>
+                  <td>Doug</td>
+                  <td>Winston</td>
+                </tr>
+              </tbody>
+            </table>
+
+      .if-semantic
+        :markdown
+          <span>
+
+              .table.table-hover.table-zebra.table-blank {
+                @import table($hover: true, $blank: true, $zebra: true);
+              }
