--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tables.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tables.sass
@@ -55,7 +55,10 @@
 =table-hover
   tbody, thead
     tr:hover
-      background-color: map-get($white, darker)
+      background-color: $primary-color
+
+      td, th
+        color: white
 
 =table-zebra
   tbody, thead
