--- a/lib/jade/docs/3.x/ui/navigation/index.jade
+++ b/lib/jade/docs/3.x/ui/navigation/index.jade
@@ -278,6 +278,199 @@ block documents
   .document
     article.article
       :markdown
+        ## Coloring navbar
+
+      .navbar.navbar-blue
+        nav
+          ul
+            li: a(href="#") Home
+            li: a(href="#") Blog
+
+      :markdown
+        Coloring the navbar just means changing the color of the container. However,
+        darker colors might mean using lighter colors for the text for better contrast.
+
+        For this, pass in a color to the `$background` parameter of `navbar()`
+
+        `navbar()` will try to guess if the color is dark enough to warrant
+        lighter text and automatically switch to white if so.
+
+    article.code
+      .if-semantic
+        :markdown
+          <span>
+
+              @include navbar($background: #333) 
+
+      .ifnot-semantic
+        :markdown
+          For a darker navbar with lighter text, use `.navbar-dark`
+
+              <div class="navbar-dark">
+                <nav>
+                  ...
+                <nav>
+              </div>
+
+  .document
+    article.article
+      h2 Responsive
+
+      :markdown
+        ### Collapse items
+
+        To use a collapse button on the navbar instead of flowing the menu items,
+        you'll need to define a few settings.
+
+        First, tell the navbar that its items should collapse.
+
+        At this point, all `li`s except for `.navbar-title` will disappear. Be sure to
+        add this, even if you only put the responsive button inside.
+
+        The `=` in the responsive button should automatically be changed to a three-bar icon.
+
+    article.code
+      .if-semantic
+        :markdown
+          <span>
+
+              .navbar.navbar-collapse {
+                @include navbar($collapse: true);
+              }
+
+      :markdown
+        <span>
+
+            <div class="navbar navbar-collapse">
+              <nav>
+                <ul>
+                  <!-- This will be the title and
+                       the responsive collapse button -->
+                  <li class="navbar-title">
+                    <h1>Acme Corp</h1>
+                    <button role="button">=</button>
+                  </li>
+
+                  <!-- These are the collapsed navigation
+                       items. -->
+
+                  <li>
+                    <a href="/products/">Products</a>
+                  </li>
+                  <li>
+                    <a href="/blog/">Blog</a>
+                  </li>
+                </ul>
+              </nav>
+            <div>
+
+  .if-semantic
+    .document
+      article.article
+        :markdown 
+          ### Define a breakpoint (optional)
+
+          By default, the navbar will collapse menu items at screen sizes narrower than a tablet
+          (according to the width defined as `$tablet`). To customize this, you can change the `$breakpoint`.
+
+          The `$breakpoint` is simply the screen width at which responsive styling
+          should cease to be applied. In the above example, we use one of the provided
+          screen size variables. However, you may also pass in a css measurement value.
+
+        +screen-sizes
+
+      article.code
+        :markdown
+          <span>
+
+              .navbar {
+                @include navbar($breakpoint: $tablet, $collapse: true);
+              }
+
+              @include navbar($breakpoint: 768px, $collapse: true);
+              @include navbar($breakpoint: 200em, $collapse: true);
+              @include navbar($breakpoint: 500pt, $collapse: true);
+
+  .document
+    article.article
+      :markdown
+        ## Fixed navbar
+
+      .if-semantic
+        :markdown
+          To create a fixed navbar, pass in `true` to the `$fixed` parameter of `navbar()`.
+
+      .ifnot-semantic
+        :markdown
+          To create a fixed navbar, use the `.navbar-fixed` class.
+
+      :markdown
+        By default, this sticks the navbar to the left and right
+        Be sure to specify these in your CSS if needed, especially if using stacked navbars.
+
+        You'll also need to decide on the padding you'll need on the underlying page.
+        Positioning the navbar to `fixed` will cause the content to start underneath it. Consider
+        adding a `margin-top` that is equal to the height of the navbar.
+
+        Keep in mind, the navbar's height changes just slightly, due to the responsive text
+        inside of it, so it's best to test this value on mobile.
+
+    article.code
+      :markdown
+        <span>
+
+            <div class="navbar navbar-fixed">
+              <nav>
+                <ul>
+                  ...
+                </ul>
+              </nav>
+            </div>
+
+      :markdown
+        <span>
+
+            .page {
+              margin-top: 45px;
+            }
+
+
+      .if-semantic
+        :markdown
+          <span>
+
+              .navbar.navbar-fixed {
+                @include navbar($fixed: true);
+              }
+
+  .document
+    article.article 
+      :markdown
+        #### Stacking navbars
+
+        For best performance with spacing and z-indexes, I highly recommend instead using a single div
+        to contain your two *non-fixed* navbars.
+
+    article.code 
+      :markdown
+        <span>
+
+            <div class="navbars">
+              <div class="navbar navbar-1">...</div>
+              <div class="navbar navbar-2">...</div>
+            </div>
+
+            .navbars {
+              position: fixed;
+              z-index: 1000;
+              top: 0;
+              left: 0;
+              right: 0;
+            }
+
+  .document
+    article.article
+      :markdown
         # Pagination
 
         Pagination styling is very similar to the navigation bar. As such, the
@@ -317,223 +510,125 @@ block documents
                 @include pagination();
               }
 
+  .document
+    article.article
+      h2 Showing pages
+      p Multiple items in a <code>ul</code> will group much like a button group.
 
+      .example
+        .pagination
+          ul
+            li: a(href="#") 1
+            li: a(href="#") 2
+            li: a(href="#") 3
+            li: a(href="#") 4
+            li: a(href="#") 5
 
-block variations
+    article.code
+      :markdown
+        <span>
 
-
-
-    ### Coloring navbar
-
-    Coloring the navbar just means changing the color of the container. However,
-    darker colors might mean using lighter colors for the text for better contrast.
-
-  .if-semantic
-    :markdown
-      For this, pass in a color to the `$background` parameter of `navbar()`
-
-          @include navbar($background: #333)
-
-      `navbar()` will try to guess if the color is dark enough to warrant
-      lighter text and automatically switch to white if so.
-
-  .ifnot-semantic
-    :markdown
-      For a darker navbar with lighter text, use `.navbar-dark`
-
-          <div class="navbar-dark">
-            <nav>
-              ...
-            <nav>
-          </div>
-
-  h3 Responsive
-  :markdown
-    #### Collapse items
-
-    To use a collapse button on the navbar instead of flowing the menu items,
-    you'll need to define a few settings.
-
-  .if-semantic
-  :markdown
-    First, tell the navbar that its items should collapse.
-
-        .navbar.navbar-collapse {
-          @include navbar($collapse: true);
-        }
-
-    At this point, all `li`s except for `.navbar-title` will disappear. Be sure to
-    add this, even if you only put the responsive button inside.
-
-        <div class="navbar navbar-collapse">
-          <nav>
-            <ul>
-              <!-- This will be the title and
-                   the responsive collapse button -->
-              <li class="navbar-title">
-                <h1>Acme Corp</h1>
-                <button role="button">=</button>
-              </li>
-
-              <!-- These are the collapsed navigation
-                   items. -->
-
-              <li>
-                <a href="/products/">Products</a>
-              </li>
-              <li>
-                <a href="/blog/">Blog</a>
-              </li>
-            </ul>
-          </nav>
-        <div>
-
-    The `=` in the responsive button should automatically be changed to a three-bar icon.
-
-    #### Define a breakpoint (optional)
-
-    By default, the navbar will collapse menu items at screen sizes narrower than a tablet
-    (according to the width defined as `$tablet`). To customize this, you can change the `$breakpoint`.
-        .navbar {
-          @include navbar($breakpoint: $tablet, $collapse: true);
-        }
-
-    The `$breakpoint` is simply the screen width at which responsive styling
-    should cease to be applied. In the above example, we use one of the provided
-    screen size variables. However, you may also pass in a css measurement value.
-
-        @include navbar($breakpoint: 768px, $collapse: true);
-        @include navbar($breakpoint: 200em, $collapse: true);
-        @include navbar($breakpoint: 500pt, $collapse: true);
-
-  +screen-sizes
-
-  :markdown
-    ### Fixed navbar
-
-  .if-semantic
-    :markdown
-      To create a fixed navbar, pass in `true` to the `$fixed` parameter of `navbar()`.
-
-          <div class="navbar">
-            <nav>
+            <div class="pagination">
               <ul>
-                ...
+                <li>
+                  <a href="#">1</a>
+                </li>
+                <li>
+                  <a href="#">2</a>
+                </li>
+                <li>
+                  <a href="#">3</a>
+                </li>
+                <li>
+                  <a href="#">4</a>
+                </li>
+                <li>
+                  <a href="#">5</a>
+                </li>
               </ul>
-            </nav>
-          </div>
+            </div>
 
-          .navbar {
-            @include navbar($fixed: true);
-          }
+  .document
+    article.article
+      h2 Multiple controls
 
-  :markdown
-    By default, this sticks the navbar to the left and right
-    Be sure to specify these in your CSS if needed, especially if using stacked navbars.
+      .example
+        .pagination
+          ul
+            li: a(href="#") &laquo; Prev
 
-    You'll also need to decide on the padding you'll need on the underlying page.
-    Positioning the navbar to `fixed` will cause the content to start underneath it. Consider
-    adding a `margin-top` that is equal to the height of the navbar.
+          ul
+            li: a(href="#") 1
+            li: a(href="#") 2
+            li: a(href="#") 3
+            li: a(href="#") 4
+            li: a(href="#") 5
 
-        .page {
-          margin-top: 45px;
-        }
+          ul
+            li: a(href="#") Next &raquo;
 
-    Keep in mind, the navbar's height changes just slightly, due to the responsive text
-    inside of it, so it's best to test this value on mobile.
+    article.code
+      :markdown
+        <span>
 
-    #### Stacking navbars
+            <div class="pagination">
+              <ul>
+                <li>
+                  <a href="#">&laquo; Prev</a>
+                </li>
+              </ul>
 
-    For best performance with spacing and z-indexes, I highly recommend instead using a single div
-    to contain your two *non-fixed* navbars.
+              <ul>
+                <li>
+                  <a href="#">1</a>
+                </li>
+                <li>
+                  <a href="#">2</a>
+                </li>
+                <li>
+                  <a href="#">3</a>
+                </li>
+                <li>
+                  <a href="#">4</a>
+                </li>
+                <li>
+                  <a href="#">5</a>
+                </li>
+              </ul>
 
-        <div class="navbars">
-          <div class="navbar navbar-1">...</div>
-          <div class="navbar navbar-2">...</div>
-        </div>
+              <ul>
+                <li>
+                  <a href="#">Next &raquo;</a>
+                </li>
+              </ul>
+            </div>
 
-        .navbars {
-          position: fixed;
-          z-index: 1000;
-          top: 0;
-          left: 0;
-          right: 0;
-        }
+  .document
+    article.article
+      h2 Other options
+      p Adding the <code>disabled</code> attribute will signal to the user the option is not available.
 
-  h2 Pagination
-  .example
-    .pagination
-      ul
-        li: a(href="#") 1
-        li: a(href="#") 2
-        li: a(href="#") 3
-        li: a(href="#") 4
-        li: a(href="#") 5
+      .example
+        .pagination
+          ul
+            li: a(href="#") 1
+            li: a(href="#" disabled) 2
 
-  :markdown
-    <span>
+    article.code
+      :markdown
+        <span>
 
-        <div class="pagination">
-          <ul>
-            <li>
-              <a href="#">1</a>
-            </li>
-            <li>
-              <a href="#">2</a>
-            </li>
-            <li>
-              <a href="#">3</a>
-            </li>
-            <li>
-              <a href="#">4</a>
-            </li>
-            <li>
-              <a href="#">5</a>
-            </li>
-          </ul>
-        </div>
+            <div class="pagination">
+              <ul>
+                <li>
+                  <a href="#">1</a>
+                </li>
+                <li>
+                  <a href="#" disabled>2</a>
+                </li>
+              </ul>
+            </div>
 
-  h3 Multiple controls
-
-  .example
-    .pagination
-      ul
-        li: a(href="#") &laquo; Prev
-
-      ul
-        li: a(href="#") 1
-        li: a(href="#") 2
-        li: a(href="#") 3
-        li: a(href="#") 4
-        li: a(href="#") 5
-
-      ul
-        li: a(href="#") Next &raquo;
-
-  h3 Other options
-  p Adding the <code>disabled</code> attribute will signal to the user the option is not available.
-
-  .pagination
-    ul
-      li: a(href="#") 1
-      li: a(href="#" disabled) 2
-
-  :markdown
-    <span>
-
-        <div class="pagination">
-          <ul>
-            <li>
-              <a href="#">1</a>
-            </li>
-            <li>
-              <a href="#" disabled>2</a>
-            </li>
-          </ul>
-        </div>
-
-
-block postJS
+block postDocsJS
   script.
-    k$.nav('.docs-nav')
     k$.nav('.sample-dropdown-nav')
